--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -27,6 +27,7 @@
         position: absolute;
         bottom: 2vh;
         border: none;
+        cursor: pointer;
 
         img{
             height: 50%;
