--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -1,4 +1,4 @@
-.Home{
+.explore{
     height: 100vh;
     width: 100vw;
 
@@ -56,6 +56,24 @@
                 margin-left: 3%;
                 box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
                 border-radius: 15px;
+
+                .friendReq{
+                    background-color: crimson;
+                    height: 10vh;
+                    width: 10vw;
+                    position: absolute;
+                    margin-top: -10vh;
+                    border-radius: 10px;
+                    
+                    button{
+                        width: 90%;
+                        margin-left: 5%;
+                        background-color: aliceblue;
+
+                    }
+
+                }
+
                 .userInfo{
                     padding: 2%;
                     width: 6%;
