--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,127 +1,466 @@
-.Home{
-    height: 100vh;
-    width: 100vw;
-
-    .Main{
-        position: fixed;
-        width: 90vw;
-        top: 16vh;
-        border-radius: 15px;
-        left: 5vw;
-        height: 80vh;
-        border: none;
-        // background-color: black;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-
-        .currentView{
-            position: fixed;
-            height: 100vh;
-            width:100vw;
-            background-color: rgba(0, 0, 0, 0.535);
-            top: 0vh;
-            left: 0vh;
-            z-index: 7;
-            
-            .viewContent{
-                height: 70vh;
-                position: absolute;
-                width: 60vw;
-                left: 20vw;
-                top:15vh;
-                background-color: aliceblue;
-                border-radius: 15px;
-            }
-        }
-
-        .bg{
-            position: fixed;
-            width: 100vw;
-            height: 100vh;
-            z-index: 0;
-            opacity: 0.15;
-        }
+@media only screen and (max-width:768px){
+    .Home{
+        height: 100vh;
+        width: 100vw;
+        position: absolute;
+        background-size: cover;
+        background-color: black;
     
-        .loadLinks{
-            height: 70vh;
-            top: 25vh;
-            padding: 5vh;
+        .Main{
+            position: fixed;
+            width: 90vw;
+            top: 16vh;
+            border-radius: 15px;
+            left: 5vw;
+            height: 80vh;
+            border: none;
             // background-color: black;
-            width: 100%;
-            overflow-y: scroll;
-
-            .request{
-                display: flex;
-                height: 20vh;
-                width: 90%;
-                margin-left: 3%;
-                box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                border-radius: 15px;
-                .userInfo{
-                    padding: 2%;
-                    width: 6%;
-                    .name{
-                        height: 2vh;
-                        margin-top: -1vh;
-                        margin-bottom: 1vh;
-                        width: 90%;
-                        margin-left: 5%;
-                        text-align: center;
-                        font-size: 2.3vh;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    
+            .currentView{
+                position: fixed;
+                height: 100vh;
+                width:100vw;
+                background-color: rgba(0, 0, 0, 0.535);
+                top: 0vh;
+                left: 0vh;
+                z-index: 7;
+    
+                .viewContent{
+                    height: 80vh;
+                    position: absolute;
+                    width: 74vw;
+                    left: 5vw;
+                    top:10vh;
+                    background-color: aliceblue;
+                    border-radius: 15px;
+                    padding: 8vw;
+                    overflow-y: scroll;
+                    display: flex;
+                    flex-direction: column;
+    
+                    .map{
+                        width: 80%;
+                        min-height: 30%;
+                        background-color: grey;
+                        margin-left: 10%;
+                        margin-top: 5%;
+                        border-radius: 10px;
                     }
-                    img{
-                        height: 10vh;
-                        border-radius: 15px;
-                        margin-left: 5%;
-                        margin-top: 1vh;
-                        width: 90%;
+                    .space{
+                        display: flex;
+                        input{
+                            margin-left: 2.5%;
+                            margin-right: 2.5%;
+                            width:80%;
+                        }
                     }
-                }
-                .travelInfo{
-                    width: 20%;
-                    height: 100%;
-                    padding-top: 2.5%;
-                    .line{
-                        position: absolute;
-                        left: 13.15vw;
-                        margin-top: 3vh;
-                        height: 7%;
+    
+                    .desc{
+                        margin-top: 2vh;
+                        .Title{
+                            font-size: 3vh;
+                        }
+                        .content{
+                            margin-left: 5%;
+                        }
                     }
+    
+                    .Title{
+                        font-size: 3vh;
+                    } 
                     .info{
                         display: flex;
                         width: 100%;
+                        // background-color: #08A318;
                         img{
                             height: 3vh;
-                            margin-right: 10%;
-                            margin-top: 3%;
+                            margin-right: 5%;
+                            // margin-top: 3%;
                         }
                         p{
-                            margin-top: 0.8%;
-                            font-size: 3vh;
-
+                            margin-top: 0.2%;
+                            font-size: 2vh;
+    
                         }
                     }
+    
+                    .btn{
+                        background-color: #08A318;
+                        border: none;
+                        color: white;
+                        padding: 4%;
+                        font-size: 3vh;
+                        width:60%;
+                        margin-left: 20%;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        margin-bottom: 5vh;
+                        margin-top: 5vh;
+    
+    
+                    }
                 }
-                .map{
-                    width: 30%;
-                    background-color: darkgray;
-                    height: 16vh;
-                    margin-top: 2vh;
+                .viewContent::-webkit-scrollbar {
+                    width: 5px;
+                  }
+                  
+                  /* Track */
+                .viewContent::-webkit-scrollbar-track {
+                    background: transparent;
+                  }
+                  
+                  /* Handle */
+                .viewContent::-webkit-scrollbar-thumb {
+                    background: green;
+                  }
+            }
+    
+            .bg{
+                position: fixed;
+                width: 100vw;
+                height: 100vh;
+                z-index: 0;
+                opacity: 0.15;
+            }
+        
+            .loadLinks{
+                height: 70vh;
+                top: 25vh;
+                padding: 2%;
+                // background-color: black;
+                width: 100%;
+                overflow-y: scroll;
+    
+                .request{
+                    height: 45vh;
+                    width: 90%;
+                    margin-left: 3%;
+                    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
                     border-radius: 15px;
-                }
-                .Details{
-                    width: 20%;
-                    margin-left: 20%;
+                    margin-bottom: 5%;
+                    .r1{
+                        width: 100%;
+                        display: flex;
+                        padding: 4%;
+                        .userInfo{
+                            padding: 2%;
+                            width: 25%;
+                            .name{
+                                height: 2vh;
+                                margin-top: -1vh;
+                                margin-bottom: 1vh;
+                                width: 90%;
+                                margin-left: 5%;
+                                text-align: center;
+                                font-size: 2vh;
+                            }
+                            img{
+                                height: 60%;
+                                border-radius: 15px;
+                                margin-left: 20%;
+                                margin-top: 1vh;
+                                width: 60%;
+                            }
+                        }
+                        .travelInfo{
+                            width: 75%;
+                            height: 100%;
+                            padding-top: 2.5%;
+                            padding-left: 15%;
+                            .line{
+                                position: absolute;
+                                left: 39.85vw;
+                                margin-top: 1.8vh;
+                                height: 5%;
+                                display: none;
+                            }
+                            .info{
+                                display: flex;
+                                width: 100%;
+                                img{
+                                    height: 2vh;
+                                    margin-right: 10%;
+                                    margin-top: 3%;
+                                }
+                                p{
+                                    margin-top: 0.8%;
+                                    font-size: 2vh;
+                                }
+                            }
+                        }
+                    }
+                    .map{
+                        width: 90%;
+                        background-color: darkgray;
+                        height: 16vh;
+                        margin-left: 5%;
+                        border-radius: 15px;
+                    }
+                    .Details{
+                        width: 100%;
+                        display: flex;
+                        .d1{
+                            width: 40%;
+                            margin-left: 5%;
+                            font-size: 1.5vh;
+                            text-align: center;
+                        }
+                        .d2{
+                            width: 40%;
+                            margin-left: 5%;
+                            font-size: 1.5vh;
+                            text-align: center;
+                        }
+                    }
+
                     .bookBtn{
                         color: white;
                         background-color: #08A318;
                         border: none;
                         height: 6vh;
-                        border-radius: 15px;
+                        border-radius: 10px;
                         cursor: pointer;
-                        width: 50%;
+                        width: 60%;
+                        margin-left: 20%;
+                        margin-top: 2%;
                     }
                 }
             }
+            .loadLinks::-webkit-scrollbar {
+                width: 5px;
+              }
+              
+              /* Track */
+            .loadLinks::-webkit-scrollbar-track {
+                background: transparent;
+              }
+              
+              /* Handle */
+            .loadLinks::-webkit-scrollbar-thumb {
+                background: green;
+              }
         }
     }
+}
+@media only screen and (min-width:768px){
+    .Home{
+        height: 100vh;
+        width: 100vw;
+    
+        .Main{
+            position: fixed;
+            width: 90vw;
+            top: 16vh;
+            border-radius: 15px;
+            left: 5vw;
+            height: 80vh;
+            border: none;
+            // background-color: black;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    
+            .currentView{
+                position: fixed;
+                height: 100vh;
+                width:100vw;
+                background-color: rgba(0, 0, 0, 0.535);
+                top: 0vh;
+                left: 0vh;
+                z-index: 7;
+    
+                .viewContent{
+                    height: 70vh;
+                    position: absolute;
+                    width: 60vw;
+                    left: 20vw;
+                    top:15vh;
+                    background-color: aliceblue;
+                    border-radius: 15px;
+                    padding: 2%;
+                    overflow-y: scroll;
+                    display: flex;
+                    flex-direction: column;
+    
+                    .map{
+                        width: 80%;
+                        min-height: 50%;
+                        background-color: grey;
+                        margin-left: 10%;
+                        margin-top: 5%;
+                        border-radius: 10px;
+                    }
+                    .space{
+                        display: flex;
+                        input{
+                            margin-left: 2.5%;
+                            margin-right: 2.5%;
+                            width:80%;
+                        }
+                    }
+    
+                    .desc{
+                        margin-top: 2vh;
+                        .Title{
+                            font-size: 3vh;
+                        }
+                        .content{
+                            margin-left: 5%;
+                        }
+                    }
+    
+                    .Title{
+                        font-size: 3vh;
+                    } 
+                    .info{
+                        display: flex;
+                        width: 100%;
+                        // background-color: #08A318;
+                        img{
+                            height: 5vh;
+                            margin-right: 5%;
+                            // margin-top: 3%;
+                        }
+                        p{
+                            margin-top: 0.2%;
+                            font-size: 3vh;
+    
+                        }
+                    }
+    
+                    .btn{
+                        background-color: #08A318;
+                        border: none;
+                        color: white;
+                        padding: 2%;
+                        font-size: 3vh;
+                        width:60%;
+                        margin-left: 20%;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        margin-bottom: 5vh;
+                        margin-top: 5vh;
+    
+    
+                    }
+                }
+                .viewContent::-webkit-scrollbar {
+                    width: 5px;
+                  }
+                  
+                  /* Track */
+                .viewContent::-webkit-scrollbar-track {
+                    background: transparent;
+                  }
+                  
+                  /* Handle */
+                .viewContent::-webkit-scrollbar-thumb {
+                    background: green;
+                  }
+            }
+    
+            .bg{
+                position: fixed;
+                width: 100vw;
+                height: 100vh;
+                z-index: 0;
+                opacity: 0.15;
+            }
+        
+            .loadLinks{
+                height: 70vh;
+                top: 25vh;
+                padding: 5vh;
+                // background-color: black;
+                width: 100%;
+                overflow-y: scroll;
+    
+                .request{
+                    display: flex;
+                    height: 20vh;
+                    width: 90%;
+                    margin-left: 3%;
+                    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                    border-radius: 15px;
+                    .userInfo{
+                        padding: 2%;
+                        width: 6%;
+                        .name{
+                            height: 2vh;
+                            margin-top: -1vh;
+                            margin-bottom: 1vh;
+                            width: 90%;
+                            margin-left: 5%;
+                            text-align: center;
+                            font-size: 2.3vh;
+                        }
+                        img{
+                            height: 10vh;
+                            border-radius: 15px;
+                            margin-left: 5%;
+                            margin-top: 1vh;
+                            width: 90%;
+                        }
+                    }
+                    .travelInfo{
+                        width: 20%;
+                        height: 100%;
+                        padding-top: 2.5%;
+                        .line{
+                            position: absolute;
+                            left: 13.15vw;
+                            margin-top: 3vh;
+                            height: 7%;
+                        }
+                        .info{
+                            display: flex;
+                            width: 100%;
+                            img{
+                                height: 3vh;
+                                margin-right: 10%;
+                                margin-top: 3%;
+                            }
+                            p{
+                                margin-top: 0.8%;
+                                font-size: 3vh;
+    
+                            }
+                        }
+                    }
+                    .map{
+                        width: 30%;
+                        background-color: darkgray;
+                        height: 16vh;
+                        margin-top: 2vh;
+                        border-radius: 15px;
+                    }
+                    .Details{
+                        width: 20%;
+                        margin-left: 20%;
+                        .bookBtn{
+                            color: white;
+                            background-color: #08A318;
+                            border: none;
+                            height: 6vh;
+                            border-radius: 15px;
+                            cursor: pointer;
+                            width: 50%;
+                        }
+                    }
+                }
+            }
+            .loadLinks::-webkit-scrollbar {
+                width: 5px;
+              }
+              
+              /* Track */
+            .loadLinks::-webkit-scrollbar-track {
+                background: transparent;
+              }
+              
+              /* Handle */
+            .loadLinks::-webkit-scrollbar-thumb {
+                background: green;
+              }
+        }
+    }   
 }
