--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -247,6 +247,8 @@
     .Home{
         height: 100vh;
         width: 100vw;
+        overflow: hidden;
+        position: fixed;
     
         .Main{
             position: fixed;
@@ -257,6 +259,7 @@
             height: 80vh;
             border: none;
             // background-color: black;
+
             box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     
             .currentView{
