--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -310,7 +310,7 @@
                 top: 0vh;
                 left: 0vh;
                 z-index: 7;
-                
+    
                 .viewContent{
                     height: 70vh;
                     position: absolute;
@@ -319,7 +319,86 @@
                     top:15vh;
                     background-color: aliceblue;
                     border-radius: 15px;
+                    padding: 2%;
+                    overflow-y: scroll;
+                    display: flex;
+                    flex-direction: column;
+    
+                    .map{
+                        width: 80%;
+                        min-height: 50%;
+                        background-color: grey;
+                        margin-left: 10%;
+                        margin-top: 5%;
+                        border-radius: 10px;
+                    }
+                    .space{
+                        display: flex;
+                        input{
+                            margin-left: 2.5%;
+                            margin-right: 2.5%;
+                            width:80%;
+                        }
+                    }
+    
+                    .desc{
+                        margin-top: 2vh;
+                        .Title{
+                            font-size: 3vh;
+                        }
+                        .content{
+                            margin-left: 5%;
+                        }
+                    }
+    
+                    .Title{
+                        font-size: 3vh;
+                    } 
+                    .info{
+                        display: flex;
+                        width: 100%;
+                        // background-color: #08A318;
+                        img{
+                            height: 5vh;
+                            margin-right: 5%;
+                            // margin-top: 3%;
+                        }
+                        p{
+                            margin-top: 0.2%;
+                            font-size: 3vh;
+    
+                        }
+                    }
+    
+                    .btn{
+                        background-color: #08A318;
+                        border: none;
+                        color: white;
+                        padding: 2%;
+                        font-size: 3vh;
+                        width:60%;
+                        margin-left: 20%;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        margin-bottom: 5vh;
+                        margin-top: 5vh;
+    
+    
+                    }
                 }
+                .viewContent::-webkit-scrollbar {
+                    width: 5px;
+                  }
+                  
+                  /* Track */
+                .viewContent::-webkit-scrollbar-track {
+                    background: transparent;
+                  }
+                  
+                  /* Handle */
+                .viewContent::-webkit-scrollbar-thumb {
+                    background: green;
+                  }
             }
     
             .bg{
