--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -451,6 +451,155 @@
         height: 100vh;
         overflow-y: scroll;
         padding-bottom: 15vh;
+
+        .currentLoads{
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 8;
+            height: 100vh;
+            width: 100vw;
+            background-color: rgba(0, 0, 0, 0.468);
+
+            .main{
+                height: 60vh;
+                width: 36vw;
+                position: absolute;
+                left:25vw;
+                top:0vh;
+                background-color: aliceblue;
+                border-radius: 15px;
+                padding: 2%;
+                overflow-y: scroll;
+
+                .load{
+                    width: 90%;
+                    margin-left: 7%;
+                    border-radius: 10px;
+                    margin-bottom: 2%;
+                    height: 10vh;
+                    display: flex;
+                    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+                    img{
+                        height: 90%;
+                        margin-left: 5%;
+                        margin-top: 5%;
+                        border-radius: 10px;
+                        margin-right: 5%;
+                    }
+                    p{
+                        margin-left: 10%;
+                        margin-right: 10%;
+                    }
+                }
+            }
+            .main::-webkit-scrollbar {
+                width: 5px;
+              }
+              
+              /* Track */
+            .main::-webkit-scrollbar-track {
+                background: transparent;
+              }
+              
+              /* Handle */
+            .main::-webkit-scrollbar-thumb {
+                background: green;
+            }
+        }
+
+        .proofPopUp{
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 8;
+            height: 100vh;
+            width: 100vw;
+            background-color: rgba(0, 0, 0, 0.468);
+            .main{
+                height: 60vh;
+                width: 36vw;
+                position: absolute;
+                left:25vw;
+                top:5vh;
+                background-color: aliceblue;
+                border-radius: 15px;
+                padding: 2%;
+                p{
+                    margin-top: 5%;
+                    width: 100%;
+                    text-align: center;
+                }
+
+                .form{
+                    height: 70%;
+                    width: 80%;
+                    margin-left: 10%;
+                    margin-top: 3%;
+                    .drop-container {
+                        position: relative;
+                        display: flex;
+                        gap: 10px;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        height: 65%;
+                        width: 80%;
+                        margin-left: 5%;
+                        padding: 20px;
+                        border-radius: 10px;
+                        border: 2px dashed #555;
+                        color: #444;
+                        cursor: pointer;
+                        transition: background .2s ease-in-out, border .2s ease-in-out;
+                      }
+                      
+                      .drop-container:hover {
+                        background: #eee;
+                        border-color: #111;
+                      }
+                      
+                      .drop-container:hover .drop-title {
+                        color: #222;
+                      }
+                      
+                      .drop-title {
+                        color: #444;
+                        font-size: 20px;
+                        font-weight: bold;
+                        text-align: center;
+                        transition: color .2s ease-in-out;
+                      }
+                      input[type=file]::file-selector-button {
+                        margin-right: 20px;
+                        border: none;
+                        background: #08A318;
+                        padding: 10px 20px;
+                        border-radius: 10px;
+                        color: #fff;
+                        cursor: pointer;
+                        transition: background .2s ease-in-out;
+                      }
+                      
+                      input[type=file]::file-selector-button:hover {
+                        background: #01580b;
+                      }
+                    .btn{
+                        background-color: #08A318;
+                        border: none;
+                        color: white;
+                        padding: 2%;
+                        font-size: 3vh;
+                        width:40%;
+                        margin-left: 30%;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        margin-bottom: 5vh;
+                        margin-top: 5vh;
+                    }
+                }
+            }
+        }
     
         .popUp{
             position: fixed;
